--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
 		"svelte": "^4.2.7",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"mongodb": "^6.9.0"
+	}
 }
